bk_ida/gobmkida/c2/is_legal
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_legal/src/engine/board.c:1530:60: error: use of undeclared identifier 'byte_9B389F'
&& ( board_ko_pos != pos || 3 - color != ( unsigned __int8)byte_9B389F[pos] && 3 - color != board[pos + 1]) ) 
                                                           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/is_legal/src/obj/1/board.o] Error 1
